--- a/appendix_code.tex
+++ b/appendix_code.tex
@@ -221,7 +221,7 @@ edge(4, 1).
 
 \subsubsection*{pyramid}
 
-A set of graph nodes forming a pyramid configuration.
+A set of graph nodes forming a pyramid-like configuration.
 An example with four nodes (depth 2) is:
 
 \begin{Verbatim}
