--- a/tables_stst_overhead.tex
+++ b/tables_stst_overhead.tex
@@ -50,6 +50,6 @@
 \hline
 \end{tabular}
 }
-\caption{Times, in milliseconds, and overheads for the query goal `\texttt{?-~path(f(X),f(Y))}'.}
+\caption{Times, in milliseconds, and overheads for the query goal `\texttt{path(f(X),f(Y))}' in YapTab.}
 \label{tbl:results_detail_stst}
 \end{table}
