--- a/tables_stst_space.tex
+++ b/tables_stst_space.tex
@@ -31,6 +31,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed number of stored answer trie nodes for the query goal `\texttt{?-~path(f(X),f(Y)).}'.}
+\caption{Detailed number of stored answer trie nodes for the query goal `\texttt{path(f(X),f(Y))}' in YapTab.}
 \label{tbl:results_detail_stst_space}
 \end{table}
